SO many changes -
I have created a scoreing system for the test. I just need to tweak it
and maybe even do a little research on how testing works.

--- a/assets/css/user.css
+++ b/assets/css/user.css
@@ -1,3 +1,22 @@
+h1{
+
+}
+
+h2,h1{
+  font-family: 'Josefin Sans', sans-serif;
+  font-weight: bold;
+}
+
+.lead{
+  font-family: 'Josefin Sans', sans-serif;
+  font-weight: 100;
+}
+
+p{
+  font-family: 'Josefin Sans', sans-serif;
+  font-weight: 100;
+}
+
 input.form-control{
   width: 250px !important;
   background-color: #75caeb;
@@ -230,7 +249,7 @@ div.radio{
   margin-left:20px;
 }
 
-label{
+.radio{
   color:black;
 }
 
